name:                reglang
version:             0.1.0.0
synopsis:            Regular language enumerator
--description:         <add desc>
license:             GPL-3
license-file:        LICENSE
author:              Aleš Omerzel, Tadej Borovšak
maintainer:          omerzel.vales@gmail.com
category:            Language
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  exposed-modules:   Enumerator,
                     Parser
  build-depends:     base,
                     parsec
  hs-source-dirs:    src
  default-language:  Haskell2010
