name:                reglang
version:             0.1.0.0
synopsis:            Regular language enumerator
--description:         <add desc>
license:             GPL-3
license-file:        LICENSE
author:              Aleš Omerzel, Tadej Borovšak
maintainer:          omerzel.vales@gmail.com
category:            Language
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  exposed-modules:   Enumerator,
                     Enumerator.Internal,
                     Parser,
                     Parser.Internal
  build-depends:     base,
                     parsec
  hs-source-dirs:    src
  default-language:  Haskell2010

executable listlang
  main-is:           listlang.hs
  default-language:  Haskell2010
  hs-source-dirs:    src
  other-modules:     Enumerator
  build-depends:     base,
                     parsec

test-suite doctest
  type:              exitcode-stdio-1.0
  default-language:  Haskell2010
  hs-source-dirs:    test
  main-is:           doctest.hs
  build-depends:     base,
                     doctest

test-suite spec
  type:              exitcode-stdio-1.0
  default-language:  Haskell2010
  hs-source-dirs:    test,
                     src
  main-is:           spec.hs
  build-depends:     base,
                     hspec,
                     QuickCheck,
                     parsec,
                     reglang
